--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
       <label for="photo-upload">Upload Photo</label><br />
       <input type="file" id="photo-upload" accept="image/*" /><br />
       <div id="image-crop-container" style="display:block; position: relative;">
-        <img id="image-crop" src="" alt="Current Photo" />
+        <img id="image-crop" src="" alt="Photo Preview" />
         <div id="crop-overlay" style="display:none; position: absolute; border: 2px dashed #007bff; background-color: rgba(0, 123, 255, 0.2); cursor: move; box-sizing: border-box;"></div>
       </div>
-      <label><input type="checkbox" id="remove-photo" /> Remove Image</label><br />
+      <input type="checkbox" id="remove-photo" style="display:none;" />
+      <button type="button" id="remove-photo-btn" title="Remove Image" style="margin-left: 10px; cursor: pointer; font-weight: bold; background: none; border: none; color: red; font-size: 18px;">×</button><br />
       <!-- Additional image controls like crop buttons can be added here -->
     </div>
     </div>
