--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <div id="map"></div>
       <button id="toggle-sidebar-btn" aria-label="Toggle Places Sidebar" >☰</button>
       <div id="places" class="sidebar-closed">
-        <h2>Places You've Been</h2>
+        <h2 id="Been">Places You've Been</h2>
         <div id="visited-places"></div>
-        <h2>Places You Want to Go</h2>
+        <h2 id="Goto">Places You Want to Go</h2>
         <div id="wishlist-places"></div>
         <button id="show-form-btn">Add Submission</button>
       </div>
