--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="container">
       <div id="map"></div>
+      <div id="map-crosshair"></div>
       <button id="toggle-sidebar-btn" aria-label="Toggle Places Sidebar" >☰</button>
       <div id="places" class="sidebar-closed">
         <h2 id="Been">Places You've Been</h2>
